Closed Bug 1209612 Opened 10 years ago Closed 10 years ago

crash in mozilla::gl::GLLibraryEGL::InitExtensionsFromDisplay Android API 10

Categories

(Firefox for Android Graveyard :: Toolbar, defect)

ARM
Android
defect
Not set
critical

Tracking

(firefox41 unaffected, firefox42+ verified, firefox43+ verified, firefox44+ fixed, firefox45+ verified, b2g-v2.5 fixed, fennec42+)

RESOLVED FIXED
Firefox 45
Tracking Status
firefox41 --- unaffected
firefox42 + verified
firefox43 + verified
firefox44 + fixed
firefox45 + verified
b2g-v2.5 --- fixed
fennec 42+ ---

People

(Reporter: kbrosnan, Assigned: jgilbert)

References

Details

(Keywords: crash, regression, topcrash-android-armv7)

Crash Data

Attachments

(3 files, 1 obsolete file)

[Tracking Requested - why for this release]: [Tracking Requested - why for this release]: This bug was filed from the Socorro interface and is report bp-a6241c57-d48f-4f1e-acec-2c3442150928. ============================================================= samsung GT-I9070 samsung GT-I8160 samsung GT-I8530 samsung GT-I8160L samsung YP-G70 samsung GT-I8160P samsung GT-I9070P Motorola XT760 SAMSUNG SAMSUNG-SGH-I897
For the other signature the following API 10 devices samsung GT-I9000 samsung GT-P1000 samsung SCH-I110 samsung SAMSUNG-SGH-I997 samsung SHW-M110S samsung SCH-S720C samsung GT-P1000L samsung SCH-I500 samsung SCH-I510 Samsung SPH-D700
Crash Signature: [@ mozilla::gl::GLLibraryEGL::InitExtensionsFromDisplay] → [@ mozilla::gl::GLLibraryEGL::InitExtensionsFromDisplay] [@ eglQueryString]
It looks like the top device is the Samsung GT-I9070 @ 47%: http://www.gsmarena.com/samsung_i9070_galaxy_s_advance-4469.php FWIW, this is also the top crash on that device @ 30%.
Unfortunately the GFX team does not have one of these devices in our inventory. Roland said he can do some testing on his Samsung Gingerbread devices but that's probably just a shot in the dark.
Recent regression, tracking. Margaret,
Flags: needinfo?(margaret.leibovic)
Margaret, you might be interested by this bug (#3 crash)
This is a platform issue. The affected devices are variants of the first generation Galaxy S phone. Acquiring devices will take searching ebay or maybe your local craigslist they have been out of stores for ages.
Flags: needinfo?(snorp)
Flags: needinfo?(milan)
Flags: needinfo?(margaret.leibovic)
We should also be able to look at the code and figure something out; this is a startup crash, perhaps a race condition with things not being initialized in time for us to use them?
Flags: needinfo?(milan) → needinfo?(jnicol)
I'm guessing a regression from bug 1182547.
Flags: needinfo?(jgilbert)
Attached patch Watch for nullptr. r=snorp (obsolete) — Splinter Review
A bit speculative, but it stands to reason some may have issue with the null display.
Attachment #8671918 - Flags: review?(snorp)
Comment on attachment 8671918 [details] [diff] [review] Watch for nullptr. r=snorp Review of attachment 8671918 [details] [diff] [review]: ----------------------------------------------------------------- We seem to be deliberately doing this, so we don't want to skip this. The caller says: //Initialize client extensions InitExtensionsFromDisplay(EGL_NO_DISPLAY);
Attachment #8671918 - Flags: review?(snorp) → review-
It could also just be us not calling eglInitialize. Regardless, we can do this the right way.
Assignee: nobody → jgilbert
Flags: needinfo?(jgilbert)
Attachment #8671918 - Attachment is obsolete: true
Attachment #8672080 - Flags: review?(snorp)
Attachment #8672080 - Flags: review?(snorp) → review+
Flags: needinfo?(jnicol)
Jeff, are you planning to land the patch? If yes, are you planning to request the uplift to aurora / beta? Today is the last day for 42. Thanks
Flags: needinfo?(jgilbert)
Flags: needinfo?(snorp)
(In reply to Sylvestre Ledru [:sylvestre] from comment #13) > Jeff, are you planning to land the patch? If yes, are you planning to > request the uplift to aurora / beta? > Today is the last day for 42. Thanks We definitely need to land it on trunk first.
Flags: needinfo?(jgilbert)
Jeff, Milan, what is the plan with this bug? Thanks Today is the go to build for mobile beta 10.
Flags: needinfo?(milan)
Flags: needinfo?(jgilbert)
The patch is causing Windows drivers to crash, so we're definitely not going to land it today. Jeff is looking at it, I'll leave needinfo on.
Flags: needinfo?(milan)
This seems to be a large part of a noticeable regression in the crash rate in release users of Firefox for Android. It is the number 1 top crash accounting for 13.3% of crashes. The volume of this crash is equal to the next 3 or 4 crashes.
[Tracking Requested - why for this release]: comment 18
tracking-fennec: --- → ?
I'll fix this tomorrow.
Tracking since it's a huge topcrash.
Flags: needinfo?(jgilbert)
The review is coming, but :jgilbert, can you get us patch(es) that apply to 44, 43 and 42 (in case they're different.)
Flags: needinfo?(jgilbert)
Comment on attachment 8686415 [details] [diff] [review] 0002-Don-t-call-eglQueryString-null-on-Android-for-now.patch Review of attachment 8686415 [details] [diff] [review]: ----------------------------------------------------------------- Can you walk me through what you're all changing? The summary of this patch makes it seem like it should be much smaller than it is.
tracking-fennec: ? → 42+
Try is clean. I'll get the uplift patches.
Attachment #8686415 - Flags: review?(jmuizelaar) → review+
I'm going to make a more minimal patch for uplift.
Flags: needinfo?(jgilbert)
Attachment #8686768 - Flags: review?(jmuizelaar)
Attachment #8686768 - Flags: review?(jmuizelaar) → review+
The uplift patch applies cleanly to both beta and release. I had to re-clone aurora, but it probably applies there as well.
Comment on attachment 8686768 [details] [diff] [review] (for uplift) 0001-Only-QueryString-with-null-if-supported.patch Approval Request Comment [Feature/regressing bug #]: - [User impact if declined]: top-crash on android [Describe test coverage new/current, TreeHerder]: none [Risks and why]: very low [String/UUID change made/needed]: none Someone should test this on an affected device before respinning a build, though.
Attachment #8686768 - Flags: approval-mozilla-release?
Attachment #8686768 - Flags: approval-mozilla-beta?
Attachment #8686768 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 45
I guess we can just track if this fixes the topcrash on nightly before spinning to other branches?
Here are the current stats: > Fennec 45.0a1: #38 @ 0.35% (- 1.11%) > Fennec 44.0a2: #119 @ 0.12% (+ 0.00%) > Fennec 43.0b1: #1 @ 11.14% (-12.30%) > Fennec 42.0: #1 @ 11.54% (- 9.06%) Based on this I don't think we're going to see much movement in Nightly and volume on Beta/Release suggests we should get this to those users ASAP. Also, the numbers dropping significantly on Beta/Release might suggest people switching away from Fennec because of this issue. If the risk isn't high I would like to see this uplifted to at least Beta. Flagging Kevin just in case he has a different read.
Flags: needinfo?(kbrosnan)
We will need this landed on beta to be able to understand the impact. Users with 4-5 year old phones are not running Nightly or Aurora. There is only one beta Firefox for Android release per week. This would need to be on beta before Monday's go to build. Liz we really would like to test this fix in beta 4.
Flags: needinfo?(kbrosnan) → needinfo?(lhenry)
Nightly crash volume for Android isn't always a good guide. For example there are only 3 crashes on 45 in the last week, with the mozilla::gl::GLLibraryEGL::InitExtensionsFromDisplay signature and none for the other sig. So testing on an affected build is probably the way. I can check back Sunday night or Monday morning so that we can still get this landed for the beta 4 build on Monday.
Flags: needinfo?(lhenry)
Comment on attachment 8686768 [details] [diff] [review] (for uplift) 0001-Only-QueryString-with-null-if-supported.patch This looks ok on m-c, approved for uplift to aurora and beta. We want to assess this fix on beta 4, gtb on Monday.
Attachment #8686768 - Flags: approval-mozilla-beta?
Attachment #8686768 - Flags: approval-mozilla-beta+
Attachment #8686768 - Flags: approval-mozilla-aurora?
Attachment #8686768 - Flags: approval-mozilla-aurora+
Under the guidance of mihai.g.pop@softvision.ro I've tested this on my personal device: Samsung Galaxy S Advance (Android 2.3.6). Tested on Firefox 43 Beta 2, it crashes with a clean profile, after restaring there is no crash, but Firefox is unusable, web pages are not loading. Tested on latest Nightly (2015-11-15) build http://ftp.mozilla.org/pub/mobile/nightly/latest-mozilla-central-android-api-9/fennec-45.0a1.multi.android-arm.apk and Firefox starts without crashing, and I can open web pages.
Marking this verified as fixed based on the previous comment. Andy will help us test this when patches will be uplifted to Beta and Release. Thanks Andy for the support.
If this improves the world for the beta users, we should strongly consider getting 42.0.1 with this in it (together with bug 1198663)
This issue does not reproduce anymore on Samsung Galaxy S Advance (Android 2.3.6), on Firefox 43 Beta 4 http://ftp.mozilla.org/pub/mobile/candidates/43.0b4-candidates/build1/android-api-9/multi/fennec-43.0b4.multi.android-arm.apk
Marking this verified as fixed based on the previous comment. Thanks Andy for testing.
Jeff, looks like this may be included in a 42.0.1 for mobile. Can you request uplift to m-r? Thanks.
Flags: needinfo?(jgilbert)
(In reply to Liz Henry (:lizzard) (needinfo? me) from comment #47) > Jeff, looks like this may be included in a 42.0.1 for mobile. Can you > request uplift to m-r? Thanks. Already requested!
Flags: needinfo?(jgilbert)
Attachment #8686768 - Flags: approval-mozilla-release? → approval-mozilla-release+
This issue does not reproduce anymore on Samsung Galaxy S Advance (Android 2.3.6), on Firefox 42.0.1.
Marking this verified as fixed based on the previous comment.
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: