Bug 1209612 - Only QueryString with null if supported. r=jmuizelaar, a=lizzard

--HG--
extra : rebase_source : af1a323950c80737fb342b91225a65517a96755c